--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "jest"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-node6": "^11.0.0",
+    "redux": "^3.7.2",
     "vue": "^2.4.4"
   },
   "browserslist": [
@@ -19,18 +23,26 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.4",
+    "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "jest": {
+    "transform": {
+    "^.+\\.js$": "babel-jest"
+    }
+    }
 }
