--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
     "redux": "^3.7.2",
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
