--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.1.10",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 192.168.0.5",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "jest"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-node6": "^11.0.0",
+    "getmdl-select": "^2.0.1",
     "vue": "^2.4.4",
     "vuex": "^3.0.1"
   },
@@ -31,6 +32,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.4",
     "regenerator-runtime": "^0.11.1",
@@ -43,6 +45,9 @@
   "jest": {
     "transform": {
       "^.+\\.js$": "babel-jest"
-    }
+    },
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
   }
 }
